# pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "wago-visu-client"
version = "0.1.0" 
authors = [{ name = "edomplc", email = "edomplc@gmail.com" }]
description = "Async Python client library for WAGO 750- PLCs with Codesys 2.3 WebVisu API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9.0", 
]

[project.urls]
Homepage = "https://github.com/edomplc/wago-visu-client"
Repository = "https://github.com/edomplc/wago-visu-client.git"
Issues = "https://github.com/edomplc/wago-visu-client/issues"
Documentation = "https://github.com/edomplc/wago-visu-client/blob/main/README.md" 

[tool.setuptools.packages.find]
where = ["src"]  # Explicitly finds packages under src/
include = ["wago_visu_client*"]  # Matches your package
namespaces = false  # No namespace packages